<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".Countdown"
    android:background="@drawable/river">


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/play"
        android:onClick="playMusic"
        android:id="@+id/play"
        android:layout_marginBottom="37dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:background="#1c143f" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pause"
        android:id="@+id/pause"
        android:onClick="pauseMusic"
        android:layout_alignTop="@+id/play"
        android:layout_centerHorizontal="true"
        android:background="#1c143f" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/stop"
        android:id="@+id/button"
        android:onClick="stopMusic"
        android:layout_alignTop="@+id/pause"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:background="#1c143f" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/yiruma_river"
        android:id="@+id/textView4"
        android:gravity="center"
        android:textSize="20sp"
        android:textIsSelectable="false"
        android:typeface="monospace"
        android:textStyle="bold"
        android:textColor="#fff"
        android:layout_marginTop="172dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/yiruma"
        android:id="@+id/textView5"
        android:layout_below="@+id/textView4"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textColor="#fff" />
</RelativeLayout>